--- a/OnionReports/Base.lproj/Main.storyboard
+++ b/OnionReports/Base.lproj/Main.storyboard
@@ -27,11 +27,11 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="gbE-gz-0aw">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="200"/>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="lie-U4-5An">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="lie-U4-5An">
                                         <rect key="frame" x="0.0" y="249" width="335" height="50.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Smm-R4-3Bs">
-                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="50.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="160" height="50.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0G-Dz-sUA">
                                                         <rect key="frame" x="0.0" y="0.0" width="39.5" height="20.5"/>
@@ -39,16 +39,23 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Date" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="742-iA-aJM">
-                                                        <rect key="frame" x="0.0" y="20.5" width="52" height="30"/>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Date" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="742-iA-aJM">
+                                                        <rect key="frame" x="0.0" y="20.5" width="160" height="30"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="fromDateEditingBegun:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="ZcD-ew-lOh"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="742-iA-aJM" firstAttribute="leading" secondItem="Smm-R4-3Bs" secondAttribute="leading" id="ebf-Hz-MpX"/>
+                                                    <constraint firstAttribute="trailing" secondItem="742-iA-aJM" secondAttribute="trailing" id="w23-AY-fs6"/>
+                                                </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="HGt-LW-A5E">
-                                                <rect key="frame" x="167.5" y="0.0" width="167.5" height="50.5"/>
+                                                <rect key="frame" x="165" y="0.0" width="170" height="50.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EJ6-He-7Cb">
                                                         <rect key="frame" x="0.0" y="0.0" width="19" height="20.5"/>
@@ -56,21 +63,28 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Date" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3j-Sv-tc5">
-                                                        <rect key="frame" x="0.0" y="20.5" width="52" height="30"/>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Date" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b3j-Sv-tc5">
+                                                        <rect key="frame" x="0.0" y="20.5" width="170" height="30"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="toDateEditingBegun:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="DD6-3w-Jio"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="b3j-Sv-tc5" firstAttribute="leading" secondItem="HGt-LW-A5E" secondAttribute="leading" id="Rbp-4w-nMb"/>
+                                                    <constraint firstAttribute="trailing" secondItem="b3j-Sv-tc5" secondAttribute="trailing" id="b17-1n-XGK"/>
+                                                </constraints>
                                             </stackView>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="mPX-bp-5oZ">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="bottom" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="mPX-bp-5oZ">
                                         <rect key="frame" x="0.0" y="423" width="335" height="50.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Gse-aw-nhl">
-                                                <rect key="frame" x="0.0" y="0.0" width="172" height="50.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="164.5" height="50.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Client" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x59-1n-kfP">
                                                         <rect key="frame" x="0.0" y="0.0" width="44.5" height="20.5"/>
@@ -78,28 +92,43 @@
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Name" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2QC-mk-CXj">
-                                                        <rect key="frame" x="0.0" y="20.5" width="59" height="30"/>
+                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Name" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2QC-mk-CXj">
+                                                        <rect key="frame" x="0.0" y="20.5" width="164.5" height="30"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="clientNameEditingBegun:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="LPf-3a-ICf"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="2QC-mk-CXj" secondAttribute="trailing" id="WtF-0Q-Jly"/>
+                                                    <constraint firstItem="2QC-mk-CXj" firstAttribute="leading" secondItem="Gse-aw-nhl" secondAttribute="leading" id="wVW-bJ-dKA"/>
+                                                </constraints>
                                             </stackView>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nKc-t6-8RO">
-                                                <rect key="frame" x="172" y="20.5" width="163" height="30"/>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nKc-t6-8RO">
+                                                <rect key="frame" x="169.5" y="20.5" width="165.5" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                             </textField>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="nKc-t6-8RO" secondAttribute="trailing" id="2z0-QS-E1a"/>
+                                            <constraint firstItem="nKc-t6-8RO" firstAttribute="leading" secondItem="Gse-aw-nhl" secondAttribute="trailing" id="ScA-TA-kab"/>
+                                        </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zya-tp-o0e">
                                         <rect key="frame" x="0.0" y="597" width="335" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="fst-i0-rhP"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Send"/>
+                                        <connections>
+                                            <action selector="didPressSend:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fBn-lb-I2m"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -119,6 +148,13 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xcd-1I-wCt" secondAttribute="bottom" constant="20" id="qfC-KK-75V"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="clientEmailText" destination="nKc-t6-8RO" id="rt0-mn-YKi"/>
+                        <outlet property="clientNameText" destination="2QC-mk-CXj" id="nId-Fw-yeC"/>
+                        <outlet property="fromDateText" destination="742-iA-aJM" id="fCb-o8-4XE"/>
+                        <outlet property="sendBtn" destination="Zya-tp-o0e" id="a1X-4M-ogX"/>
+                        <outlet property="toDateText" destination="b3j-Sv-tc5" id="1IC-h5-wIR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
