--- a/OnionReports/Base.lproj/Main.storyboard
+++ b/OnionReports/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="xcd-1I-wCt" secondAttribute="trailing" constant="20" id="6FR-fF-pjB"/>
                             <constraint firstItem="xcd-1I-wCt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6TZ-1V-oLt"/>
